--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "crappo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "compile:sass":"sass sass/main.scss css/style.css -w"
-  },
-  "author": "oyinda",
-  "license": "ISC",
-  "devDependencies": {
-    "sass": "^1.52.1"
-  }
+	"name": "crappo",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"watch:sass": "sass sass/main.scss css/style.css -w",
+		"devserver": "live-server",
+		"start": "npm-run-all --parallel devserver watch:sass"
+	},
+	"author": "oyinda",
+	"license": "ISC",
+	"devDependencies": {
+		"live-server": "^1.2.2 ",
+		"npm-run-all": "^4.1.5",
+		"sass": "^1.53.0"
+	}
 }
